# haskell-project-template

./: .gitignore  LICENSE  Nemesis  hackell-project-template.cabal  project.cabal
